revising cl post 1

--- a/_posts/2014-9-14-cl.md
+++ b/_posts/2014-9-14-cl.md
@@ -1,20 +1,27 @@
 ---
 layout: post
-title:  "Exploring the Colour Lovers API: Getting the Data"
+title:  "Exploring the Colourlovers API: Getting the Data"
 date:   2014-09-10 15:54:44
 categories: jekyll update
 ---
 
 There is a lot of great, freely available data on the web that is fascinating to explore with R.  
 Companies and websites that want to expose their data to clients use a web API, where API
-stands for ['Application programming interface.'](http://en.wikipedia.org/wiki/Application_programming_interface)  Many of the most popular APIs now have [R packages](http://cran.r-project.org/web/packages/twitteR/index.html) associated with them. These
+stands for [Application programming interface.](http://en.wikipedia.org/wiki/Application_programming_interface)  Many of the most popular APIs now have [R packages](http://cran.r-project.org/web/packages/twitteR/index.html) associated with them. These
 packages help R-users retrieve data from the APIs.  But I want to show how to retrieve data from
 an API of your choice
 without relying on a special package for it. This will allow you to get data from a wide
 range of APIs or even begin to write an R package for a specific API.
 
-In this tutorial, I'll use the [Colour Lovers API](http://www.colourlovers.com/api/) as 
-an example. (It turns out an [R package](http://cran.r-project.org/web/packages/colourlovers/index.html) for this API *was* released this August, but I first began exploring it in May.) This
+In this tutorial, I'll use the [Colourlovers API](http://www.colourlovers.com/api/) as 
+an example. This API makes data from the [Colourlovers.com](http://www.colourlovers.com) website available. The website's description reads:
+
+> COLOURlovers is a creative community where people from 
+> around the world create and share colors, palettes and patterns, 
+> discuss the latest trends and explore colorful articles . . . 
+> All in the spirit of love.
+
+(It turns out an [R package](http://cran.r-project.org/web/packages/colourlovers/index.html) for the Colourlovers API *was* released this August, but I first began exploring it in May.) This
 API does not require authentication, which makes it ideal for a first try. 
 
 Although I will be working without an API-specific package, I do need two R helper packages.
@@ -188,4 +195,4 @@ Now I save the list of lists for later manipulation.
 save(ombre.processed, file="partI.RData")
 ```
 
-Next up: *Exploring the Colour Lovers API: Data Cleaning and Transformation.*
+Next up: *Exploring the Colourlovers API: Data Cleaning and Transformation.*
