--- a/_posts/2014-9-14-cl.md
+++ b/_posts/2014-9-14-cl.md
@@ -32,7 +32,7 @@ library("RCurl")
 library("RJSONIO")
 ```
 
-First I write a function to retrieve data from the Colour Lovers API.  The key helper
+First I write a function to retrieve data from the Colourlovers API.  The key helper
 function 'getURL' is provided by the package **RCurl.**
 
 
