--- a/_posts/2014-9-14-cl.md
+++ b/_posts/2014-9-14-cl.md
@@ -4,6 +4,7 @@ title:  "Exploring the Colourlovers API: Getting the Data"
 date:   2014-09-10 15:54:44
 categories: jekyll update
 ---
+<!--fix: change parameter from name class-->
 
 There is a lot of great, freely available data on the web that is fascinating to explore with R.  
 Companies and websites that want to expose their data to clients use a web API, where API
@@ -43,13 +44,13 @@ kSort <- "DESC"
 kFormat <- "json"
 kKeyword <- "ombre"
 
-GetCLURL <- function(parameters, values, class){
+GetCLURL <- function(parameters, values, api.class){
   if(length(parameters) != length(values)){
     stop("The length of the parameters and the 
          length of the values must be the same.")
   }
   cl.URL.palettes <-
-    paste("http://www.colourlovers.com/api/", class, "?", sep="")
+    paste("http://www.colourlovers.com/api/", api.class, "?", sep="")
   cl.URL.options <- 
     paste(paste(parameters, values, sep="="), collapse="&")
   cl.URL <- paste(cl.URL.palettes, cl.URL.options, sep="")
